[package]
name = "toychest"
version = "0.0.0"
edition = "2021"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", rev = "d19858bce8f4e425837d55c9bda44c258b2dd176", features = ["debug", "canvas"] }
iced_native = { git = "https://github.com/iced-rs/iced", rev = "d19858bce8f4e425837d55c9bda44c258b2dd176" }
mimalloc = { version = "*", default-features = false }
self_update = "0.28.0"

[profile.release]
codegen-units = 1
lto = "fat"
panic = 'abort'
